# jericho

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  routes_env.py  run.py
agents/: baseline_agent.py  gemini.py  llama.py
api/: main.py  routes_baseline.py  routes_env.py  routes_grader.py  routes_tasks.py
env/: __init__.py  environment.py  executor.py  models.py  reward.py  state.py
server/: app.py
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py  registry.py
tests/: test_env.py
