[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jericho"
version = "1.0.0"
description = "A code debugging RL environment where AI agents fix buggy Python code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "groq",
    "google-generativeai",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]